# template_ds

./: .gitignore  CMakeLists.txt  README.md  TemplateDataStructures.sln  main.cpp
TemplateDataStructures/: TList.h  TemplateDataStructures.vcxproj  TemplateDataStructures.vcxproj.filters  main.cpp
include/: TList.h  TTree.h  tds.h
